--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>DISNEY</title>
-	<link rel="stylesheet" type="text/css" href="static/css/styles.css">
-</head>
-<body>
+{% extends 'layout.html' %}
+{% block body %}
 	<div class="header">
 		<ul class="menu-wrapper">
 			<li>parks & tickets</li>
@@ -116,5 +111,5 @@
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+
+{% endblock %}
