--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -117,4 +117,5 @@ body {
 /* line 79, ../../compass/sass/styles.sass */
 .main-content .right-content-bar .map {
   text-align: center;
+  margin-top: 30px;
 }
