--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
 		<div class="left-content-bar">
 			<p class="left-bar-header">
 				{{header[0][0]}}
-				<!-- Encounter the magic of nature with rare creatures, authentic adventures and world-class entertainment at Disney’s Animal Kingdom park, one of the largest animal theme parks in the world. Read More -->
 			</p>
+			<a class="more_link" href="#">Read More</a>
 			<div class="left-block-items">
 				{% for i in data %}
 					<div class="left-block-item">
@@ -36,20 +36,19 @@
 							</p>
 						</div>
 					</div>
-				{% endfor %}
-				
+				{% endfor %}	
 			</div>
 		</div>
 		<div class="right-content-bar">
 			<div class="hours">
-				<p>Hours</p>
+				<p class="bigger">Hours</p>
 				<p>Wednesday</p>
 				<p>September 28, 2016</p>
 				<p>9:00 AM to 9:00 PM</p>
-			</div>
-			<div class="print-map">
-				Download Printable Map
-				Guest Services
+				<div class="print-map">
+					Download Printable Map
+					Guest Services
+				</div>
 			</div>
 			<div class="tickets">
 				<p>Starting at</p>
