--- a/compass/sass/styles.sass
+++ b/compass/sass/styles.sass
@@ -25,21 +25,26 @@ body
 			max-width: 100%
 			border-radius: 12px
 	.left-content-bar
-		vertical-align: top
+		// vertical-align: top
 		width: 69%
 		display: inline-block
 		box-sizing: border-box
 		padding-left: 20px
 		p.left-bar-header
 			font-family: Helvetica, Arial, sans-serif
-			font-size: 20px
+			font-size: 18px
 			line-height: 28px
 			color: $content-font
+			margin: 0px
+		.more_link
+			font-size: 18px
 		.left-block-items
 			.left-block-item
-				margin-bottom: 10px
+				margin-top: 10px
 				border-bottom: 1px solid #ccc
 				.hero-image
+					vertical-align: top
+					margin-bottom: 10px
 					display: inline-block
 					max-width: 30%
 					img
@@ -48,13 +53,27 @@ body
 					max-width: 60%
 					display: inline-block
 					.block-header
+						font-size: 20px
+						font-weight: bold
 					.block-text
 	.right-content-bar
 		width: 29%
 		display: inline-block
 		vertical-align: top
-		.print-map
-			padding: 20px 0px
+		.hours
+			margin: 5px 0px 35px
+			padding: 10px
+			background-color: $disney-light-blue
+			border-radius: 12px
+			border: 1px solid #ddd
+			box-sizing: border-box
+			p
+				margin-bottom: 0px
+			.bigger
+				font-size: 18px
+				font-weight: bold
+			.print-map
+				padding: 20px 0px
 		.tickets
 			font-family: Helvetica, Arial, sans-serif
 			background-color: $disney-blue
