--- a/templates/admin_portal.html
+++ b/templates/admin_portal.html
@@ -1,7 +1,16 @@
 {% extends 'layout.html' %}
 {% block body %}
+
+<script type="text/javascript" src="static/js/admin.js"></script>
+{% if message is equalto FileAdded %}
+	<div class="col-xs-12 alert alert-success text-center">Successful Upload</div>
+{% elif message is equalto UpdateSuccessful %}
+	<div class="col-xs-12 alert alert-warning text-center">Content Updated</div>
+{% elif message is equalto DeleteSuccessful %}
+	<div class="col-xs-12 alert alert-warning text-center">Content Deleted</div>
+{% endif %}
 <div class="col-xs-10 col-xs-offset-1">
-	<form class="form-horizontal" method="post" action="/admin_update">
+	<form class="form-horizontal" method="post" action="/admin_update" enctype="multipart/form-data">
 	  <div class="form-group">
 	    <label for="inputEmail3" class="col-sm-2 control-label">Header</label>
 	    <div class="col-sm-10">
@@ -17,7 +26,13 @@
 	   <div class="form-group">
 	    <label for="inputPassword3" class="col-sm-2 control-label">Image</label>
 	    <div class="col-sm-10">
-	      <input type="text" name="image" class="form-control" id="inputPassword3" placeholder="Image Link">
+	      <input type="file" name="image" class="form-control" id="inputPassword3" placeholder="Image Link" style="width: 300px">
+	    </div>
+	  </div>
+	  <div class="form-group">
+	    <label for="inputPassword3" class="col-sm-2 control-label">Location</label>
+	    <div class="col-sm-10">
+	      <input type="text" name="location" class="form-control" id="inputPassword3" placeholder="Location">
 	    </div>
 	  </div>
 	  <div class="form-group">
@@ -31,10 +46,35 @@
 	  </div>
 	  <div class="form-group">
 	    <div class="col-sm-offset-2 col-sm-10">
-	      <button type="submit" class="btn btn-default">Sign in</button>
+	      <button type="submit" class="btn btn-default">Add</button>
 	    </div>
 	  </div>
 	</form>
 </div>
+<div class="col-xs-10 col-xs-offset-1">
+	<table id="home-content">
+		<thead>
+			<tr>
+				<th>header_text</th>
+				<th>content</th>
+				<th>image_link</th>
+				<th>location</th>
+			</tr>
+		</thead>
+		{% for row in data %}
+			<!-- loop through our sql data -->
+			<tr>
+				<td>{{row[1]}}</td>
+				<td>{{row[0]}}</td>
+				<td>{{row[2]}}</td>
+				<td>{{row[3]}}</td>
+				<td><a href="/edit/{{row[4]}}">Edit</a></td>
+				<td><a href="/delete/{{row[4]}}">Delete</a></td>
+			</tr>
+		{% endfor %}
+	</table>
+</div>
+
+
 
 {% endblock %}
